Need camera permission in infolist for mojave. Otherwise we get an assert... todo: catch properly in code!
Former-commit-id: b0c45cedfcf878318e6fe7e89fd7575d47e8101a

--- a/Info.plist
+++ b/Info.plist
@@ -28,6 +28,8 @@
 	<string>PopTrack</string>
 	<key>CFBundleIconFile</key>
 	<string>Lollypop.icns</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera capture!</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
